--- a/style.css
+++ b/style.css
@@ -92,8 +92,17 @@ footer {
 /* MEDIA QUERIES */
 
 @media screen and (max-width:600px){
- body{
-   zoom: 0.65;
- }
-
-} 
+  .navbar-brand {
+    zoom: 0.7;
+  }
+  
+  .images_profil{
+    zoom: 0.65;
+  }
+  .side_bar_links{
+    zoom: 0.70;
+  }
+  .side_bar_links i{
+    padding: 10px 0 ;
+  }
+  }
